# ggrep

./: dune-project  ggrep.opam
_build/: .db  .digest-db  log
_build/default/: ggrep.dune-package  ggrep.install
_build/default/.dune/: configurator  configurator.v2
_build/default/lib/: ggrep.cma  ggrep.cmxa  ggrep.cmxs
_build/default/lib/.ggrep.objs/byte/: ggrep.cmi  ggrep.cmo  ggrep.cmt
_build/default/lib/.ggrep.objs/native/: ggrep.cmx
_build/default/lib/.merlin-conf/: lib-ggrep
_build/default/test/.merlin-conf/: exe-test_ggrep
_build/default/test/.test_ggrep.eobjs/byte/: dune__exe__Test_ggrep.cmi  dune__exe__Test_ggrep.cmti
_build/default/test/.test_ggrep.eobjs/native/: dune__exe__Test_ggrep.cmx
lib/: dune
test/: dune
