(lang dune 3.16)

(name ggrep)

(generate_opam_files true)

(source
 (github OnorioCatenacci/ggrep))

(authors "Onorio Catenacci")

(maintainers "Onorio Catenacci")

(license MIT)

(documentation https://url/to/documentation)

(package
 (name ggrep)
 (synopsis "Good grep")
 (description "A modest attempt to build my own grep util in OCaml")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
